Fixed build system

--- a/delay_i2s/main/CMakeLists.txt
+++ b/delay_i2s/main/CMakeLists.txt
@@ -1,3 +1,6 @@
-idf_component_register(SRCS "main.c" "../src/esp_it.c"
-                       PRIV_REQUIRES esp_driver_gpio esp_driver_i2s
-                       INCLUDE_DIRS "." "../inc")
+idf_component_register(
+    SRCS "main.c"
+    PRIV_REQUIRES esp_driver_gpio esp_driver_i2s bt
+    INCLUDE_DIRS "."
+    REQUIRES src
+)
