--- a/delay_i2s/src/CMakeLists.txt
+++ b/delay_i2s/src/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "esp_it.c"
-                       INCLUDE_DIRS "../inc")
+idf_component_register(
+    SRCS "esp_it.c"
+    INCLUDE_DIRS "../inc"
+)
